--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -10,6 +10,20 @@ button {
   padding: 0.5rem 1rem;
   height: 4rem;
 }
+.user-profile {
+  background: none;
+  border: none;
+}
+.user-profile>img:hover {
+  cursor: pointer;
+}
+
+.user-profile>img {
+  padding: 1px;
+  border-radius: 50%;
+  border: 2px solid rgb(196, 82, 40);
+  background-color: #ffcabd;
+}
 
 .mob-menu-btn {
   display: none;
@@ -154,6 +168,68 @@ a{
   border:  1px solid #9900123f;
   border-radius: 2rem;
   padding: 0.5rem 0.7rem;
+}
+
+.drop-profile {
+  display: none;
+}
+
+.drop-profile.show
+{
+  display: block;
+  border: 1px solid #ffa8b2;
+  position: absolute;
+  background-color: #fdc6c6;
+  padding: 1rem 1rem 0.6rem ;
+  border-radius: 0.8rem;
+  right: 1.1rem;
+  top: 4.1rem;
+}
+
+.drop-profile #name {
+  color: #990011;
+  font-weight: 400;
+  font-size: small;
+}
+
+.drop-profile #email {
+  color: #7e5c60;
+  font-weight: 300;
+  font-size: x-small;
+}
+
+.drop-profile hr {
+  color: #fdc6c6;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.drop-profile>div {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+}
+
+.drop-profile>div>button {
+  padding: 4px 8px;
+  border: 1px solid rgb(206, 110, 110);
+  border-radius: 12px;
+  color: #a0444f;
+  background-color: #FCF6F5;
+  font-size: x-small;
+  font-weight: 400;
+}
+
+.drop-profile::after {
+  content: "";
+  border-top: 1px solid #ffa8b2;
+  position: absolute;
+  top: -0.6rem;
+  right: 0.9rem;
+  background-color: #fdc6c6;
+  width: 1rem;
+  height: 1.5rem;
+  transform: rotate(45deg);
 }
 
 @media screen and (max-width: 600px) {
