--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,20 +1,21 @@
 .footer-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  background-color: rgb(172, 75, 14);
-
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #402619;
+  padding: 3rem 1rem;
+  justify-content: space-between;
+  gap: 2rem;
 }
 
-.footer-container>section {
-  display: inline-flex;
+.footer-container section {
+  display: flex;
   flex-direction: column;
   gap: 1rem;
-  padding: 1rem;
 }
 
-.footer-container>section>div>a {
+.footer-container section div a {
   margin-top: 0.2rem;
-  border: 1px solid rgba(255, 255, 255, 0.332);
+  border: 1px solid rgba(202, 103, 22, 0.469);
   border-radius: 1rem;
   padding: 0.4rem 0.8rem;
   font-size: small;
@@ -22,50 +23,64 @@
   color: rgba(255, 248, 244, 0.891);
 }
 
-.footer-container>section>div>a:hover {
+.footer-container section div a:hover {
   background-color: rgb(85, 30, 7);
   cursor: pointer;
 }
 
 
 .bottom-footer {
-  background-color: rgb(148, 63, 27);
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(44, 24, 0);
   margin-left: -2rem;
 }
 
-.bottom-footer>ul {
+.bottom-footer p {
+  color: rgba(255, 255, 255, 0.78);
+  font-size: x-small;
+}
+
+.bottom-footer ul {
   list-style: none;
   display: flex;
-  transform: skewX(-20deg);
-  padding-right: 1rem;
-  width: max-content;
-  background-color: rgb(108, 33, 5);
+  gap: 16px;
   color: white;
+  align-items: center;
+  margin-left: -2.2rem;
 }
 
-.bottom-footer>ul>li {
-  margin-top: 4px;
-  padding: 6px 8px;
-  background-color: rgb(108, 33, 5);
+.bottom-footer ul li {
+  display: flex;
+  align-items: center;
+  padding: 8px 10px;
+  background-color:rgb(39, 20, 0);
+  border-radius: 4px;
 }
 
-.bottom-footer>ul>li:hover {
+.bottom-footer ul li a {
+  width: 18px;
+  height: 18px;
+}
+
+.bottom-footer ul li:hover {
   color: rgb(251, 227, 218);
 }
 
-.footer-container>section>p {
-  background-color: rgb(148, 63, 27);
+.footer-container section p {
+  border-radius: 6px;
+  background-color: rgb(91, 46, 0);
   padding: 0.2rem 0.5rem;
   width: fit-content;
-  color: rgb(255, 255, 255);
+  color: rgba(255, 255, 255, 0.812);
   font-weight: 400;
+  border-bottom: 2.5px solid rgba(255, 239, 222, 0.174);
+  border-right: 2px solid rgba(255, 237, 216, 0.201);
   font-size: small;
   transform: skewX(-8deg);
-}
-
-
-@media screen and (max-width: 600px) {
-  .footer-container {
-    justify-content: space-between;
-  }
+  box-shadow: 2px 1px 2px rgba(41, 16, 0, 0.475);
 }
