--- a/src/components/jobs/showJobs.css
+++ b/src/components/jobs/showJobs.css
@@ -1,140 +1,8 @@
-.jobs-container {
+.jobs_wrapper {
   display: flex;
-  flex-wrap: wrap;
   flex-direction: column;
-  gap: 18px;
-  padding: 1.5rem 0.5rem 0.5rem 0.5rem;
-  border-radius: 1rem;
-  min-height: 480px;
-}
-
-.job-card {
-  position: relative;
-  display: flex;
-  background-color: rgb(251, 236, 228);
-  border: 2px solid rgb(214, 157, 129);
-  border-radius: 8px;
-  padding: 8px;
-  gap: 14px;
-  align-items: center;
-  transition: all 180ms ease-in-out;
-}
-
-.job-card:hover{
-  background-color: rgb(111, 46, 27);
-  cursor: pointer;
-  color: white;
-  border: 2px solid rgb(255, 255, 255);
-}
-
-
-.job-card img {
-  border-radius: 50%;
-  border: 2px solid rgb(163, 86, 47);
-}
-
-.job-title {
-  font-weight: 800;
-  font-size: 14px;
-  color: inherit;
-}
-
-.company-name {
-  border: 1px solid rgb(255, 119, 0);
-  border-radius: 2rem;
-  background-color: antiquewhite;
-  font-weight: 300;
-  font-size: x-small;
-  width: max-content;
-  float: inline-start;
-  padding: 3px 8px;
-  text-align: center;
-  color: black;
-}
-
-.salary {
-  border: 1px solid rgb(255, 203, 60);
-  border-radius: 2rem;
-  background-color: rgb(198, 60, 0);
-  font-weight: 400;
-  font-size: x-small;
-  width: max-content;
-  padding: 3px 8px;
-  color: white;
-  text-align: center;
-}
-
-.location {
-  border: 1px solid rgb(173, 129, 10);
-  border-radius: 2rem;
-  background-color: rgb(255, 184, 154);
-  font-weight: 300;
-  font-size: x-small;
-  width: max-content;
-  padding: 3px 8px;
-  color: rgb(112, 72, 1);
-  text-align: center;
-}
-
-.l {
-  display: inline-flex;
-  gap: 10px;
-  flex-wrap: wrap;
-}
-
-
-.job-info {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  gap: 5px;
-  width: 100%;
-}
-
-.nav-btns {
-  background-color: rgb(183, 61, 5);
-  border-radius: 0.2rem;
-  display: flex;
   width: 100%;
   align-items: center;
-  color: white;
-  font-weight: 800;
-  font-size: small;
-  justify-content: flex-end;
-  gap: 1rem;
-}
-
-.nav-btns button {
-  display: inherit;
   justify-content: center;
-  align-items: center;
-  border: none;
-  padding: 0.5rem;
-  border-radius: 50%;
-  color: wheat;
-  background-color: rgb(183, 61, 5);
-}
-
-@media screen and (min-width:910px) {
-  .job-card:hover::after {
-    content: "APPLY";
-    background-color: white;
-    color: rgb(198, 60, 0);
-    padding: 8px 12px;
-    margin-right: 1rem;
-    border-radius: 12px;
-    font-style: italic;
-  }
-  .job-card:hover::before {
-    position: absolute;
-    right: 90px;
-    font-style: italic;
-    content: "SHOW DETAILS";
-    background-color: rgb(255, 251, 166);
-    color: rgb(143, 98, 1);
-    padding: 8px 12px;
-    margin-right: 1rem;
-    border-radius: 12px;
-  
-  }
+  gap: 1.5rem;
 }
