--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,12 +1,12 @@
-.main-container {
-  display: grid;
-  grid-template-columns: 1.2fr 2fr 0.1fr;
-}
+/* .main-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} */
 
 .call_action {
   position: sticky;
   top: 15px;
-  justify-self: center;
   margin-top: 1.5rem;
   display: flex;
   flex-direction: column;
@@ -28,6 +28,10 @@
   font-size: small;
   padding: 0 10px;
   color: rgba(134, 36, 8, 0.992);
+}
+
+.call_action button:nth-child(1) {
+  width: fit-content;
 }
 
 .call_action button {
